@@ -11,12 +11,16 @@
  *     Obeo - initial API and implementation
  *******************************************************************************/
 
+import { GQLTool } from './Palette.types';
+
 export interface DiagramPaletteContextValue {
   x: number | null;
   y: number | null;
   isOpened: boolean;
   showDiagramPalette: (x: number, y: number) => void;
   hideDiagramPalette: () => void;
+  getLastToolInvoked: (toolSectionId: string) => GQLTool | null;
+  setLastToolInvoked: (toolSectionId: string, tool: GQLTool) => void;
 }
 
 export interface DiagramPaletteContextProviderProps {
@@ -27,4 +31,10 @@ export interface DiagramPaletteContextProviderState {
   x: number | null;
   y: number | null;
   isOpened: boolean;
+  lastToolsInvoked: ToolSectionWithLastTool[];
+}
+
+export interface ToolSectionWithLastTool {
+  toolSectionId: string;
+  lastTool: GQLTool;
 }
